enrollment record swagger
