# lib/dbservice_web/controllers/enrollment_record_controller.ex
@@ -6,9 +6,59 @@ defmodule DbserviceWeb.EnrollmentRecordController do
 
   action_fallback DbserviceWeb.FallbackController
 
+  use PhoenixSwagger
+
+  def swagger_definitions do
+    %{
+      EnrollmentRecord:
+        swagger_schema do
+          title("EnrollmentRecord")
+          description("An enrollment record for the student")
+
+          properties do
+            grade(:string, "Grade")
+            academic_year(:string, "Academic Year")
+            is_current(:boolean, "Is current enrollment record for student")
+            student_id(:integer, "Student ID that the program enrollment belongs to")
+            school_id(:integer, "School ID that the program enrollment belongs to")
+          end
+
+          example(%{
+            grade: "7",
+            academic_year: "2022",
+            is_current: true,
+            student_id: 1,
+            school_id: 1
+          })
+        end,
+      EnrollmentRecords:
+        swagger_schema do
+          title("EnrollmentRecords")
+          description("All enrollment records")
+          type(:array)
+          items(Schema.ref(:EnrollmentRecord))
+        end
+    }
+  end
+
+  swagger_path :index do
+    get("/api/enrollment-record")
+    response(200, "OK", Schema.ref(:EnrollmentRecords))
+  end
+
   def index(conn, _params) do
     enrollment_record = Schools.list_enrollment_record()
     render(conn, "index.json", enrollment_record: enrollment_record)
+  end
+
+  swagger_path :create do
+    post("/api/enrollment-record")
+
+    parameters do
+      body(:body, Schema.ref(:EnrollmentRecord), "Enrollment record to create", required: true)
+    end
+
+    response(201, "Created", Schema.ref(:EnrollmentRecord))
   end
 
   def create(conn, params) do
@@ -24,9 +74,30 @@ defmodule DbserviceWeb.EnrollmentRecordController do
     end
   end
 
+  swagger_path :show do
+    get("/api/enrollment-record/{enrollmentRecordId}")
+
+    parameters do
+      enrollmentRecordId(:path, :integer, "The id of the enrollment record", required: true)
+    end
+
+    response(200, "OK", Schema.ref(:EnrollmentRecord))
+  end
+
   def show(conn, %{"id" => id}) do
     enrollment_record = Schools.get_enrollment_record!(id)
     render(conn, "show.json", enrollment_record: enrollment_record)
+  end
+
+  swagger_path :update do
+    patch("/api/enrollment-record/{enrollmentRecordId}")
+
+    parameters do
+      enrollmentRecordId(:path, :integer, "The id of the enrollment record", required: true)
+      body(:body, Schema.ref(:EnrollmentRecord), "Enrollment record to create", required: true)
+    end
+
+    response(200, "Updated", Schema.ref(:EnrollmentRecord))
   end
 
   def update(conn, params) do
@@ -36,6 +107,16 @@ defmodule DbserviceWeb.EnrollmentRecordController do
            Schools.update_enrollment_record(enrollment_record, params) do
       render(conn, "show.json", enrollment_record: enrollment_record)
     end
+  end
+
+  swagger_path :delete do
+    PhoenixSwagger.Path.delete("/api/enrollment-record/{enrollmentRecordId}")
+
+    parameters do
+      enrollmentRecordId(:path, :integer, "The id of the enrollment record", required: true)
+    end
+
+    response(204, "No Content")
   end
 
   def delete(conn, %{"id" => id}) do
